syntax = "proto3";

import "ProfileTree.proto";

package org_glowroot_collector_spi;

option java_package = "org.glowroot.collector.proto";

message Aggregate {

  int64 capture_time = 1;
  // aggregates use double instead of int64 to avoid (unlikely) 292 year nanosecond rollover
  double total_nanos = 2;
  int64 transaction_count = 3;
  int64 error_count = 4;
  // aggregates use double instead of int64 to avoid (unlikely) 292 year nanosecond rollover
  double total_cpu_nanos = 5; // -1 means N/A
  double total_blocked_nanos = 6; // -1 means N/A
  double total_waited_nanos = 7; // -1 means N/A
  double total_allocated_bytes = 8; // -1 means N/A
  Histogram total_nanos_histogram = 9;

  repeated Timer root_timer = 10;

  repeated QueriesByType queries_by_type = 11;

  ProfileTree profile_tree = 12;

  message Histogram {
    // for smaller numbers of transactions, the individual raw values are stored directly
    // these values are ordered for fast percentile calculation on retrieval
    repeated int64 ordered_raw_value = 1;
    // for larger numbers of transactions, the histogram is tracked and encoded using HdrHistogram
    bytes encoded_bytes = 2;
  }

  message Timer {
    // name is null for synthetic root
    string name = 1;
    bool extended = 2;
    // aggregates use double instead of int64 to avoid (unlikely) 292 year nanosecond rollover
    double total_nanos = 3;
    int64 count = 4;
    repeated Timer child_timer = 5;
  }

  message QueriesByType {
    // e.g. "SQL", "CQL"
    string type = 1;
    repeated Query query = 2;
  }

  message Query {
    string text = 1;
    // aggregates use double instead of int64 to avoid (unlikely) 292 year nanosecond rollover
    double total_nanos = 2;
    int64 total_rows = 3;
    int64 execution_count = 4;
  }
}
